lendings/borrowingsのAPIをグループ配下に移動する
