# backend/openapi.yaml
@@ -12,40 +12,6 @@ tags:
   - name: Users
   - name: Health
 paths:
-  /borrowings:
-    get:
-      operationId: Borrowing_getAll
-      summary: 全ての借り入れの取得
-      parameters: []
-      responses:
-        '200':
-          description: The request has succeeded.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Borrowing.GetAllResponse'
-        '400':
-          description: The server could not understand the request due to invalid syntax.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '401':
-          description: Access is unauthorized.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
-          description: Server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-      tags:
-        - Borrowings
   /credits:
     get:
       operationId: Credits_list
@@ -492,11 +458,16 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Group.AddMemberRequest'
-  /lendings:
+  /groups/{id}/lendings:
     get:
       operationId: Lending_getAll
-      summary: 全ての立て替えの取得
-      parameters: []
+      summary: グループ内の立て替え一覧取得
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: The request has succeeded.
@@ -512,6 +483,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        '403':
+          description: Access is forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         '500':
           description: Server error
           content:
@@ -522,8 +499,13 @@ paths:
         - Lendings
     post:
       operationId: Lending_create
-      summary: 立て替えの作成
-      parameters: []
+      summary: グループ内の立て替え作成
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
         '201':
           description: The request has succeeded and a new resource has been created as a result.
@@ -543,6 +525,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        '403':
+          description: Access is forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         '500':
           description: Server error
           content:
@@ -557,12 +545,17 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Lending.CreateRequest'
-  /lendings/{id}:
+  /groups/{id}/lendings/{lendingId}:
     get:
       operationId: Lending_get
-      summary: 立て替えの取得
+      summary: グループ内の立て替え取得
       parameters:
         - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: lendingId
           in: path
           required: true
           schema:
@@ -586,6 +579,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        '403':
+          description: Access is forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         '500':
           description: Server error
           content:
@@ -596,9 +595,14 @@ paths:
         - Lendings
     put:
       operationId: Lending_update
-      summary: 立て替えの更新
+      summary: グループ内の立て替え更新
       parameters:
         - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: lendingId
           in: path
           required: true
           schema:
@@ -650,9 +654,14 @@ paths:
               $ref: '#/components/schemas/Lending.UpdateRequest'
     delete:
       operationId: Lending_delete
-      summary: 立て替えの削除
+      summary: グループ内の立て替え削除
       parameters:
         - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: lendingId
           in: path
           required: true
           schema:
@@ -692,6 +701,45 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
       tags:
         - Lendings
+  /groups/{id}/borrowings:
+    get:
+      operationId: Borrowing_getAll
+      summary: グループ内の借り一覧取得
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Borrowing.GetAllResponse'
+        '401':
+          description: Access is unauthorized.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '403':
+          description: Access is forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+      tags:
+        - Borrowings
 security:
   - BearerAuth: []
 components:
